--- a/src/pages/Signup/styles.module.css
+++ b/src/pages/Signup/styles.module.css
@@ -1,5 +1,7 @@
 .root {
   height: 100%;
   width: 100%;
-  background-color: red;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
