--- a/src/components/layout/styles.module.css
+++ b/src/components/layout/styles.module.css
@@ -1,7 +1,11 @@
 .root {
   height: 100vh;
   width: 100%;
-  background-color: black;
+  background-image: linear-gradient(
+    45deg,
+    rgba(126, 82, 0, 0.486),
+    rgba(68, 0, 68, 0.651)
+  );
   display: flex;
   justify-content: center;
   align-items: center;
