--- a/src/components/layout/styles.module.css
+++ b/src/components/layout/styles.module.css
@@ -1,11 +1,7 @@
 .root {
   height: 100vh;
   width: 100%;
-  background-image: linear-gradient(
-    45deg,
-    rgba(126, 82, 0, 0.486),
-    rgba(68, 0, 68, 0.651)
-  );
+  background-image: linear-gradient(45deg, orange, purple);
   display: flex;
   justify-content: center;
   align-items: center;
