--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import "./tailwind.css";
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -6,7 +8,9 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #000000;
+
   --paneles-bg-color: #242424;
+  --borders: rgba(255, 235, 205, 0.288);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -17,6 +21,8 @@
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
