--- a/src/components/Menu/styles.module.css
+++ b/src/components/Menu/styles.module.css
@@ -33,3 +33,17 @@
   justify-content: center;
   cursor: pointer;
 }
+
+.li:hover {
+  background-color: red;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
