--- a/src/pages/Settings/styles.module.css
+++ b/src/pages/Settings/styles.module.css
@@ -1,8 +1,8 @@
 .root {
-  height: 15%;
+  height: 100%;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-bottom: 1px solid var(--borders);
-  cursor: pointer;
+  background-color: purple;
 }
