--- a/src/components/Menu/styles.module.css
+++ b/src/components/Menu/styles.module.css
@@ -1,7 +1,8 @@
 .root {
   background-color: black;
   height: 100%;
-  width: 25%;
+  max-width: 25%;
+  min-width: 25%;
   border-right: 1px solid var(--borders);
 }
 
