--- a/src/components/MyRoomsPanel/styles.module.css
+++ b/src/components/MyRoomsPanel/styles.module.css
@@ -1,7 +1,7 @@
 .root {
   height: 100%;
   width: 100%;
-  background-color: red;
+  background: black;
   display: flex;
   align-items: center;
   justify-content: center;
