--- a/src/components/Options/styles.module.css
+++ b/src/components/Options/styles.module.css
@@ -1,5 +1,5 @@
 .root {
-  background-color: var(--paneles-bg-color);
+  background-color: black;
   height: 100%;
   width: 100%;
   display: flex;
@@ -18,8 +18,18 @@
 
 .buttonsContainer {
   height: 60%;
-  width: 100%;
+  width: 50%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
+}
+
+.button {
+  padding: 8px 16px;
+  font-size: 16px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
