--- a/src/components/Menu/styles.module.css
+++ b/src/components/Menu/styles.module.css
@@ -7,7 +7,6 @@
 }
 
 .linkContainer {
-  background-color: red;
   height: 85%;
   width: 100%;
   display: flex;
@@ -16,7 +15,6 @@
 }
 
 .list {
-  background-color: rebeccapurple;
   height: 100%;
   width: 100%;
   display: flex;
@@ -36,7 +34,7 @@
 }
 
 .li:hover {
-  background-color: red;
+  background-color: rgb(12, 12, 12);
 }
 
 a {
