--- a/src/pages/Profile/styles.module.css
+++ b/src/pages/Profile/styles.module.css
@@ -1,7 +1,7 @@
 .root {
   height: 100%;
   width: 100%;
-  background-color: red;
+  background-color: black;
   display: flex;
   align-items: center;
   justify-content: center;
