--- a/src/components/Menu/styles.module.css
+++ b/src/components/Menu/styles.module.css
@@ -3,13 +3,18 @@
   height: 100%;
   max-width: 25%;
   min-width: 25%;
-  border-right: 1px solid var(--borders);
+  border-right: 1px solid white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .linkContainer {
-  height: 85%;
+  height: 85vh;
   width: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -35,6 +40,25 @@
 
 .li:hover {
   background-color: rgb(12, 12, 12);
+}
+
+.actionsContainer {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: end;
+}
+
+.closeSession {
+  list-style: none;
+  justify-self: baseline;
+  background-color: black;
+  width: 100%;
+  height: 10vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
 
 a {
