--- a/src/components/Logo/styles.module.css
+++ b/src/components/Logo/styles.module.css
@@ -1,8 +1,9 @@
 .root {
-  height: 15%;
+  height: 15vh;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-bottom: 1px solid var(--borders);
+  border-bottom: 1px solid white;
   cursor: pointer;
 }
