--- a/src/components/RoomPanel/styles.module.css
+++ b/src/components/RoomPanel/styles.module.css
@@ -1,9 +1,27 @@
 .root {
-  background-color: green;
   height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-color: rgb(0, 0, 0);
+  position: relative;
+}
+.codeContainer {
+  height: 10vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  padding-right: 15px;
+}
+
+.messagesContainer {
+  height: 80%;
+  width: 100%;
+}
+.messageSender {
+  height: 20%;
+  width: 100%;
 }
