--- a/src/components/RoomCode/styles.module.css
+++ b/src/components/RoomCode/styles.module.css
@@ -1,6 +1,7 @@
 .root {
   height: 100%;
+  width: 98%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
