--- a/src/components/MessagesPanel/styles.module.css
+++ b/src/components/MessagesPanel/styles.module.css
@@ -1,9 +1,34 @@
 .root {
-  height: 100%;
-  width: 100%;
-  background-color: aqua;
+  max-height: 100%;
+  min-height: 100%;
+  max-width: 100%;
+  min-width: 100%;
+  background-color: var(--paneles-bg-color);
+  padding: 10px;
+  overflow-y: scroll;
 }
 
 .owner {
-  background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+}
+
+.guest {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.message {
+  background-image: linear-gradient(45deg, rgb(255, 166, 0), rgb(128, 0, 128));
+  height: fit-content;
+  padding: 5px;
+  border-radius: 4px;
+  max-width: 300px;
+}
+
+li {
+  list-style: none;
+  margin-bottom: 5px;
 }
