--- a/src/components/layout/styles.module.css
+++ b/src/components/layout/styles.module.css
@@ -1,7 +1,7 @@
 .root {
   height: 100vh;
   width: 100%;
-  background-image: linear-gradient(45deg, orange, purple);
+  background-image: linear-gradient(150deg, rgb(82, 4, 82), rgb(39, 12, 0));
   display: flex;
   justify-content: center;
   align-items: center;
