--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,24 @@
 body {
   margin: 0;
 }
+
+/* Estilos generales de la barra de desplazamiento */
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: #000000;
+}
+
+/* Estilos del fondo de la barra de desplazamiento */
+::-webkit-scrollbar-track {
+  background-color: #000000;
+}
+
+/* Estilos del "pulgar" de la barra de desplazamiento */
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+}
+
+/* Estilos del "pulgar" cuando se pasa el cursor sobre él */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
