--- a/src/ui/UserImage/styles.module.css
+++ b/src/ui/UserImage/styles.module.css
@@ -1,11 +1,20 @@
 .root {
-  height: 150px;
-  width: 150px;
+  height: 250px;
+  width: 250px;
+  background-color: orange;
   border-radius: 50%;
-  background-color: red;
+  display: flex;
+  align-items: center;
+  justify-self: center;
+  padding: 10px;
 }
 
 .img {
-  max-height: 150px;
-  width: auto;
+  height: 100%;
+  width: 100%;
+  background-color: red;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
 }
