--- a/src/ui/UserImage/styles.module.css
+++ b/src/ui/UserImage/styles.module.css
@@ -1,18 +1,19 @@
 .root {
-  height: 250px;
-  width: 250px;
-  background-color: orange;
+  height: 150px;
+  width: 150px;
+  background-color: white;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-self: center;
-  padding: 10px;
+  padding: 5px;
+  margin: 10px;
 }
 
 .img {
   height: 100%;
   width: 100%;
-  background-color: red;
+  background-color: var(--paneles-bg-color);
   display: flex;
   align-items: center;
   justify-content: center;
