--- a/src/ui/RoomButton/styles.module.css
+++ b/src/ui/RoomButton/styles.module.css
@@ -8,3 +8,17 @@
 .root:hover {
   cursor: pointer;
 }
+
+.fadeInButton {
+  opacity: 0;
+  animation: fadeIn 1s ease-in forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
