--- a/src/components/WelcomeForm/styles.module.css
+++ b/src/components/WelcomeForm/styles.module.css
@@ -1,5 +1,5 @@
 .container {
-  background-color: var(--paneles-bg-color);
+  background-color: black;
   height: 100%;
   width: 100%;
   display: flex;
@@ -8,10 +8,10 @@
 }
 
 .form {
-  background: linear-gradient(to bottom right, purple, orange);
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  width: 300px;
 }
 
 .title {
