--- a/src/components/MyRoomsPanel/styles.module.css
+++ b/src/components/MyRoomsPanel/styles.module.css
@@ -6,3 +6,14 @@
   align-items: center;
   justify-content: center;
 }
+
+.myrooms {
+  width: 100%;
+  max-height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.guestrooms {
+  width: 100%;
+}
