--- a/src/components/MyRoomsPanel/styles.module.css
+++ b/src/components/MyRoomsPanel/styles.module.css
@@ -3,17 +3,28 @@
   width: 100%;
   background: black;
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: center;
+  padding-top: 6.5%;
 }
 
 .myrooms {
   width: 100%;
   max-height: 100%;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.myRoomsContainer {
+  display: flex;
   flex-wrap: wrap;
 }
 
 .guestrooms {
   width: 100%;
+  max-height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
