--- a/src/components/SettingsPanel/styles.module.css
+++ b/src/components/SettingsPanel/styles.module.css
@@ -6,3 +6,52 @@
   align-items: center;
   justify-content: center;
 }
+
+.form {
+  min-height: 60%;
+  width: 40%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.line {
+  height: 1px;
+  width: 100%;
+  background-color: white;
+  margin-bottom: 30px;
+}
+
+label {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.input {
+  width: 100%;
+  height: 40px;
+  border: none;
+  border-radius: 4px;
+}
+
+.pic {
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  border: none;
+}
+
+.button {
+  width: 100%;
+
+  height: 40px;
+  border: none;
+  border-radius: 4px;
+  background-color: blue;
+  color: white;
+  margin-top: 15px;
+}
