--- a/src/components/SettingsPanel/styles.module.css
+++ b/src/components/SettingsPanel/styles.module.css
@@ -8,11 +8,11 @@
 }
 
 .form {
-  min-height: 60%;
-  width: 40%;
+  min-height: 80%;
+  width: 80%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   flex-direction: column;
 }
 
@@ -23,8 +23,15 @@
   margin-bottom: 30px;
 }
 
-label {
+.labelsContainer {
+  display: flex;
   width: 100%;
+  height: 100%;
+  justify-content: space-around;
+}
+
+label {
+  width: 300px;
   display: flex;
   align-items: center;
   justify-content: center;
