--- a/src/ui/UserImage/styles.module.css
+++ b/src/ui/UserImage/styles.module.css
@@ -11,11 +11,17 @@
 }
 
 .img {
-  height: 100%;
-  width: 100%;
+  max-height: 100%;
+  max-width: 100%;
+  overflow: hidden;
   background-color: var(--paneles-bg-color);
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
+}
+
+img {
+  height: 250px;
+  width: auto;
 }
