--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 
   --paneles-bg-color: #242424;
   --borders: rgba(255, 235, 205, 0.288);
+  --blue-button: #007bff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
