--- a/src/components/ProfilePanel/styles.module.css
+++ b/src/components/ProfilePanel/styles.module.css
@@ -12,7 +12,7 @@
   font-size: 17px;
   border-radius: 4px;
   padding: 5px 10px;
-  background-color: blue;
+  background-color: var(--blue-button);
   color: white;
   margin-top: 20px;
 }
