--- a/src/components/SettingsPanel/styles.module.css
+++ b/src/components/SettingsPanel/styles.module.css
@@ -54,11 +54,10 @@ label {
 
 .button {
   width: 100%;
-
   height: 40px;
   border: none;
   border-radius: 4px;
-  background-color: blue;
+  background-color: var(--blue-button);
   color: white;
   margin-top: 15px;
 }
