validacion de contraseña

--- a/src/ui/CloseSessionButton/styles.module.css
+++ b/src/ui/CloseSessionButton/styles.module.css
@@ -8,10 +8,11 @@
 }
 
 .closeButton {
+  cursor: pointer;
   height: 70%;
   border: none;
   padding: 10px;
   color: white;
-  background-color: rgb(29, 29, 29);
+  background-color: purple;
   border-radius: 4px;
 }
