--- a/src/components/MyRoomsPanel/styles.module.css
+++ b/src/components/MyRoomsPanel/styles.module.css
@@ -6,6 +6,7 @@
   align-items: start;
   justify-content: center;
   padding-top: 6.5%;
+  position: relative;
 }
 
 .myrooms {
@@ -27,4 +28,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.loaderContainer {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  z-index: 10;
 }
