--- a/src/pages/Landing/styles.module.css
+++ b/src/pages/Landing/styles.module.css
@@ -42,4 +42,14 @@ p {
   background-color: purple;
   border-radius: 60px;
   cursor: pointer;
+  animation: fade-in 0.5s ease-out;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
