--- a/src/components/LoginForm/styles.module.css
+++ b/src/components/LoginForm/styles.module.css
@@ -1,19 +1,22 @@
 .container {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: 100%;
+  width: 100%;
 }
 
 .title {
   font-size: 24px;
   margin-bottom: 24px;
+  color: black;
 }
 
 .form {
   display: flex;
   flex-direction: column;
   width: 300px;
+  color: black;
 }
 
 .formGroup {
@@ -30,7 +33,7 @@
 .input {
   padding: 8px;
   font-size: 14px;
-  border: 1px solid #ccc;
+  border: 1px solid #000000;
   border-radius: 4px;
   width: 100%;
 }
@@ -47,4 +50,35 @@
 
 .button:hover {
   background-color: #0056b3;
+}
+
+.formContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 50%;
+  height: 100%;
+}
+
+.imageContainer {
+  background-color: red;
+  height: 100%;
+  width: 50%;
+  background-image: url("../../assets/img/password.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-top-left-radius: 400px;
+  border-bottom-left-radius: 300px;
+  animation: fade-in 2s ease-out;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
