--- a/src/pages/Password/styles.module.css
+++ b/src/pages/Password/styles.module.css
@@ -1,7 +1,7 @@
 .root {
   height: 80vh;
   width: 100%;
-  background-color: black;
+  background-color: white;
   display: flex;
   align-items: center;
   justify-content: center;
