--- a/src/components/Options/styles.module.css
+++ b/src/components/Options/styles.module.css
@@ -26,9 +26,9 @@
 }
 
 .button {
-  padding: 8px 16px;
-  font-size: 16px;
-  background-color: #007bff;
+  padding: 5px 10px;
+  font-size: 20px;
+  background-color: purple;
   color: #fff;
   border: none;
   border-radius: 4px;
