detalles de front

--- a/src/components/SettingsPanel/styles.module.css
+++ b/src/components/SettingsPanel/styles.module.css
@@ -58,6 +58,6 @@ label {
   border: none;
   border-radius: 4px;
   background-color: var(--blue-button);
-  color: white;
+  color: black;
   margin-top: 15px;
 }
