--- a/src/ui/CloseSessionButton/styles.module.css
+++ b/src/ui/CloseSessionButton/styles.module.css
@@ -1,14 +1,14 @@
 .root {
   width: 100%;
-  height: 30%;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 5px;
+  margin: 10px;
 }
 
 .closeButton {
   cursor: pointer;
+  font-size: 20px;
   height: 70%;
   width: 90%;
   border: none;
@@ -16,4 +16,5 @@
   color: white;
   background-color: purple;
   border-radius: 4px;
+  padding: 5px 10px;
 }
