--- a/src/components/SettingsPanel/styles.module.css
+++ b/src/components/SettingsPanel/styles.module.css
@@ -58,6 +58,7 @@ label {
   border: none;
   border-radius: 4px;
   background-color: var(--blue-button);
-  color: black;
+  color: white;
+  font-size: 20px;
   margin-top: 15px;
 }
