cambios de front generales

--- a/src/ui/deleteRoomButton/styles.module.css
+++ b/src/ui/deleteRoomButton/styles.module.css
@@ -15,3 +15,17 @@
   border-radius: 50%;
   background-color: white;
 }
+
+.line {
+  height: 2px;
+  width: 15px;
+  rotate: 45deg;
+  background-color: white;
+}
+
+.invertedLine {
+  height: 2px;
+  width: 15px;
+  rotate: -45deg;
+  background-color: white;
+}
