--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
   --paneles-bg-color: #242424;
   --borders: rgba(255, 235, 205, 0.288);
   --blue-button: #007bff;
+  --background-color: rgb(255, 223, 209) a;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
