--- a/src/ui/CloseSessionButton/styles.module.css
+++ b/src/ui/CloseSessionButton/styles.module.css
@@ -1,20 +1,19 @@
 .root {
   width: 100%;
+  height: 30%;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 10px;
 }
 
 .closeButton {
   cursor: pointer;
-  font-size: 20px;
-  height: 70%;
-  width: 90%;
+  font-size: 18px;
+  height: 100%;
+  width: 100%;
   border: none;
   padding: 10px;
   color: white;
   background-color: purple;
-  border-radius: 4px;
-  padding: 5px 10px;
+  padding: 15px auto;
 }
