create room fixed

--- a/src/pages/Landing/styles.module.css
+++ b/src/pages/Landing/styles.module.css
@@ -27,7 +27,7 @@ p {
   background-color: black;
   width: 50%;
   height: 100%;
-  background-image: url("../../assets/img/landing.png");
+  background-image: url("../../assets/img/landing.webp");
   background-position: left;
   background-repeat: no-repeat;
   background-size: cover;
