--- a/src/components/SettingsPanel/styles.module.css
+++ b/src/components/SettingsPanel/styles.module.css
@@ -7,20 +7,18 @@
   justify-content: center;
 }
 
+.title {
+  background-color: purple;
+}
+
 .form {
   min-height: 80%;
   width: 80%;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-direction: column;
-}
-
-.line {
-  height: 1px;
-  width: 100%;
-  background-color: white;
-  margin-bottom: 30px;
+  background-color: green;
 }
 
 .labelsContainer {
@@ -28,6 +26,7 @@
   width: 100%;
   height: 100%;
   justify-content: space-around;
+  background-color: red;
 }
 
 label {
@@ -61,4 +60,10 @@ label {
   color: white;
   font-size: 20px;
   margin-top: 15px;
+}
+.cont1 {
+  background-color: orange;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
