--- a/src/components/SettingsPanel/styles.module.css
+++ b/src/components/SettingsPanel/styles.module.css
@@ -39,9 +39,10 @@ label {
 
 .input {
   width: 100%;
-  height: 40px;
+  height: 35px;
   border: none;
   border-radius: 4px;
+  padding: 5px;
 }
 
 .pic {
