--- a/src/pages/Landing/styles.module.css
+++ b/src/pages/Landing/styles.module.css
@@ -7,6 +7,15 @@
   background-color: #ffdcd2;
 }
 
+@media screen and (max-width: 600px) {
+  .root {
+    height: 100vh;
+    width: 100vh;
+    flex-direction: column;
+    padding: 20px;
+  }
+}
+
 .titleContainer {
   height: 60%;
   color: black;
@@ -19,12 +28,27 @@
   font-size: 25px;
   animation: fade-in 0.5s ease-out;
 }
+@media screen and (max-width: 600px) {
+  .titleContainer {
+    width: 100%;
+    height: 100%;
+    font-size: 20px;
+    z-index: 2;
+    color: #ffdcd2;
+  }
+}
 
 p {
   text-align: center;
+  color: black;
 }
+@media screen and (max-width: 600px) {
+  p {
+    color: #ffdcd2;
+  }
+}
+
 .imageContainer {
-  background-color: black;
   width: 50%;
   height: 100%;
   background-image: url("../../assets/img/landing.webp");
@@ -34,6 +58,18 @@ p {
   border-top-left-radius: 300px;
   border-bottom-left-radius: 400px;
   animation: fade-in 0.5s ease-out;
+}
+@media screen and (max-width: 600px) {
+  .imageContainer {
+    position: absolute;
+    z-index: 1;
+    right: 0;
+    top: 5%;
+    width: 95%;
+    height: 90%;
+    border-top-left-radius: 40px;
+    border-bottom-left-radius: 350px;
+  }
 }
 
 .comenzarButton {
