--- a/src/pages/Landing/styles.module.css
+++ b/src/pages/Landing/styles.module.css
@@ -40,16 +40,21 @@
 }
 
 .title {
-  font-size: 60px;
+  font-size: 50px;
+}
+@media screen and (max-width: 600px) {
+  .title {
+    font-size: 60px;
+  }
 }
 
 p {
   text-align: center;
   color: black;
+  font-size: 30px;
 }
 @media screen and (max-width: 600px) {
   p {
-    font-size: 30px;
     color: #ffdcd2;
   }
 }
