--- a/src/components/SignupForm/styles.module.css
+++ b/src/components/SignupForm/styles.module.css
@@ -1,24 +1,30 @@
 .root {
   height: 80%;
   width: 90%;
-  background-color: var(--panelres-bg-color);
+  background-color: rgb(255, 223, 209);
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@media screen and (max-width: 600px) {
+  .root {
+    height: 100%;
+    width: 100%;
+  }
 }
 
 .form {
   display: flex;
   flex-direction: column;
-  padding: 20px;
   width: 300px;
+  justify-content: center;
+  align-items: center;
 }
 
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+.formTitle {
+  color: black;
+  margin-bottom: 20px;
 }
 
 .label {
@@ -26,6 +32,21 @@
   flex-direction: column;
   font-size: 14px;
   margin-bottom: 8px;
+  color: black;
+}
+
+@media screen and (max-width: 600px) {
+  .label {
+    display: flex;
+    flex-direction: column;
+    font-size: 14px;
+    margin-bottom: 8px;
+  }
+}
+
+.labelTitle {
+  font-size: 20px;
+  color: black;
 }
 
 .input {
@@ -33,18 +54,27 @@
   font-size: 14px;
   border: 1px solid #ccc;
   border-radius: 4px;
+  width: 100%;
+}
+@media screen and (max-width: 600px) {
+  .input {
+    width: 100%;
+  }
 }
 
 .button {
+  width: 100%;
   padding: 8px 16px;
   font-size: 16px;
-  background-color: #007bff;
+  background-color: purple;
   color: #fff;
   border: none;
   border-radius: 4px;
   cursor: pointer;
 }
 
-.button:hover {
-  background-color: #0056b3;
+@media screen and (max-width: 600px) {
+  .button {
+    font-size: 20px;
+  }
 }
