--- a/src/pages/Signup/styles.module.css
+++ b/src/pages/Signup/styles.module.css
@@ -4,5 +4,5 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--paneles-bg-color);
+  background-color: rgb(255, 223, 209);
 }
