--- a/src/components/Menu/styles.module.css
+++ b/src/components/Menu/styles.module.css
@@ -1,13 +1,19 @@
 .root {
   background-color: black;
   height: 100%;
-  max-width: 25%;
-  min-width: 25%;
+  width: 25%;
   border-right: 1px solid white;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+@media screen and (max-width: 600px) {
+  .root {
+    width: 100%;
+    height: 10vh;
+  }
 }
 
 .linkContainer {
@@ -17,6 +23,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+@media screen and (max-width: 600px) {
+  .linkContainer {
+    display: none;
+  }
 }
 
 .list {
