--- a/src/components/Options/styles.module.css
+++ b/src/components/Options/styles.module.css
@@ -25,6 +25,18 @@
   justify-content: space-evenly;
 }
 
+@media screen and (max-width: 600px) {
+  .buttonsContainer {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+  }
+}
+
 .button {
   padding: 5px 10px;
   font-size: 20px;
@@ -33,4 +45,12 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
+}
+
+@media screen and (max-width: 600px) {
+  .button {
+    font-size: 25px;
+    width: 90%;
+    padding: 10px;
+  }
 }
