--- a/src/pages/GetInRoom/styles.module.css
+++ b/src/pages/GetInRoom/styles.module.css
@@ -4,3 +4,9 @@
   display: flex;
   background-color: black;
 }
+
+@media screen and (max-width: 600px) {
+  .root {
+    flex-direction: column;
+  }
+}
