--- a/src/components/Logo/styles.module.css
+++ b/src/components/Logo/styles.module.css
@@ -4,8 +4,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid purple;
   cursor: pointer;
+  background-color: #ffdcd2;
+  color: purple;
 }
 
 @media screen and (max-width: 600px) {
