--- a/src/components/Menu/styles.module.css
+++ b/src/components/Menu/styles.module.css
@@ -1,18 +1,19 @@
 .root {
-  background-color: black;
   height: 100%;
   width: 25%;
-  border-right: 1px solid white;
+  border-right: 1px solid purple;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-color: #ffdcd2;
 }
 
 @media screen and (max-width: 600px) {
   .root {
     width: 100%;
     height: 10vh;
+    background-color: white;
   }
 }
 
@@ -41,7 +42,6 @@
 
 .li {
   list-style: none;
-  background-color: black;
   width: 100%;
   height: 10vh;
   display: flex;
@@ -51,7 +51,7 @@
 }
 
 .li:hover {
-  background-color: rgb(12, 12, 12);
+  background-color: purple;
 }
 
 .actionsContainer {
@@ -75,11 +75,14 @@
 
 a {
   text-decoration: none;
-  color: white;
+  color: purple;
   height: 100%;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 20px;
+}
+a:hover {
+  color: #ffdcd2;
 }
