cambios de front

--- a/src/components/LoginForm/styles.module.css
+++ b/src/components/LoginForm/styles.module.css
@@ -62,7 +62,7 @@
 }
 
 .imageContainer {
-  background-color: red;
+  background-color: wheat;
   height: 100%;
   width: 50%;
   background-image: url("../../assets/img/password.jpg");
