--- a/src/components/SettingsPanel/styles.module.css
+++ b/src/components/SettingsPanel/styles.module.css
@@ -1,7 +1,7 @@
 .root {
   height: 100%;
   width: 100%;
-  background-color: black;
+  background-color: #ffdcd2;
   display: flex;
   align-items: center;
   justify-content: center;
