--- a/src/pages/Password/styles.module.css
+++ b/src/pages/Password/styles.module.css
@@ -1,7 +1,7 @@
 .root {
-  height: 80vh;
+  height: 100vh;
   width: 100%;
-  background-color: white;
+  background-color: #ffdcd2;
   display: flex;
   align-items: center;
   justify-content: center;
