--- a/src/ui/BurguerButton/styles.module.css
+++ b/src/ui/BurguerButton/styles.module.css
@@ -1,6 +1,6 @@
 .root {
   display: none;
-  background-color: rgb(34, 34, 34);
+  background-color: purple;
   height: 5vh;
   width: 5vh;
   border-radius: 4px;
@@ -14,22 +14,38 @@
     display: flex;
   }
 }
+.crossRoot {
+  background-color: purple;
+  display: none;
+  height: 5vh;
+  width: 5vh;
+  border-radius: 4px;
+  align-items: center;
+  justify-content: center;
+}
+@media screen and (max-width: 600px) {
+  .crossRoot {
+    display: flex;
+    position: relative;
+  }
+}
 
 .line {
   height: 3px;
-  width: 80%;
+  width: 60%;
   background-color: white;
 }
 .crossline {
+  position: absolute;
   height: 3px;
   width: 80%;
   background-color: white;
 }
 
 .crossline:nth-child(1) {
-  transform: translate(-50%, -50%) rotate(45deg);
+  transform: rotate(45deg);
 }
 
 .crossline:nth-child(2) {
-  transform: translate(-50%, -50%) rotate(-45deg);
+  transform: rotate(-45deg);
 }
