profile ya se encuentra lis, dist

--- a/src/pages/Profile/styles.module.css
+++ b/src/pages/Profile/styles.module.css
@@ -1,8 +1,14 @@
 .root {
   height: 100%;
   width: 100%;
-  background-color: black;
+  background-color: var(--background-general);
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@media screen and (max-width: 600px) {
+  .root {
+    flex-direction: column;
+  }
 }
