--- a/src/components/MyRoomsPanel/styles.module.css
+++ b/src/components/MyRoomsPanel/styles.module.css
@@ -1,12 +1,18 @@
 .root {
   height: 100%;
   width: 100%;
-  background: black;
+  background: #fff;
   display: flex;
   align-items: start;
   justify-content: center;
   padding-top: 6.5%;
   position: relative;
+}
+
+@media screen and (max-width: 600px) {
+  .root {
+    height: 90vh;
+  }
 }
 
 .myrooms {
@@ -17,9 +23,21 @@
   align-items: center;
 }
 
+@media screen and (max-width: 600px) {
+  .myrooms {
+    background-color: red;
+  }
+}
+
 .myRoomsContainer {
   display: flex;
   flex-wrap: wrap;
+}
+
+@media screen and (max-width: 600px) {
+  .myRoomsContainer {
+    background-color: rebeccapurple;
+  }
 }
 
 .guestrooms {
@@ -28,12 +46,4 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.loaderContainer {
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  z-index: 10;
 }
