--- a/src/components/ProfilePanel/styles.module.css
+++ b/src/components/ProfilePanel/styles.module.css
@@ -7,6 +7,11 @@
   gap: 40px;
   position: relative;
 }
+@media screen and (max-width: 600px) {
+  .root {
+    flex-direction: column;
+  }
+}
 
 .editButton {
   border: none;
