--- a/src/pages/MyRooms/styles.module.css
+++ b/src/pages/MyRooms/styles.module.css
@@ -1,8 +1,13 @@
 .root {
   height: 100%;
   width: 100%;
-  background-color: red;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@media screen and (max-width: 600px) {
+  .root {
+    flex-direction: column;
+  }
 }
