--- a/src/pages/Settings/styles.module.css
+++ b/src/pages/Settings/styles.module.css
@@ -6,3 +6,9 @@
   justify-content: center;
   background-color: purple;
 }
+
+@media screen and (max-width: 600px) {
+  .root {
+    flex-direction: column;
+  }
+}
