--- a/src/components/MyRoomsPanel/styles.module.css
+++ b/src/components/MyRoomsPanel/styles.module.css
@@ -1,7 +1,7 @@
 .root {
   height: 100%;
   width: 100%;
-  background: #fff;
+  background: var(--background-general);
   display: flex;
   align-items: start;
   justify-content: center;
