--- a/src/components/RoomPanel/styles.module.css
+++ b/src/components/RoomPanel/styles.module.css
@@ -5,16 +5,16 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: rgb(0, 0, 0);
   position: relative;
 }
 .codeContainer {
-  height: 13vh;
+  height: 16vh;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: end;
   padding-right: 15px;
+  background-color: var(--background-general);
 }
 
 .messagesContainer {
