--- a/src/components/MessageSender/styles.module.css
+++ b/src/components/MessageSender/styles.module.css
@@ -1,5 +1,5 @@
 .root {
-  height: 10%;
+  height: 10vh;
   width: 100%;
   display: flex;
   align-items: center;
@@ -20,7 +20,7 @@
   border: none;
   height: 100%;
   width: 90%;
-  background-color: var(--paneles-bg-color);
+  background-color: var(--background-messageContainer);
   color: white;
   padding: 10px;
 }
